oop: Expose ProgramBinary functions to GrGLInterface.

This patch exposes three functions to the GrGLInterface, which is
required for proper GrContext validation in skia:
- glGetProgramBinary
- glProgramBinary
- glProgramParameteri

R=piman@chromium.org

Bug: 781084
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id2d09f47c01e68f926bd2c66c6871d8e21a41b9a
Reviewed-on: https://chromium-review.googlesource.com/753978
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513854}
Former-commit-id: 9893245dccbbf562ea4db02d9463c87d3b75cffc